# python-project-lvl2

./: Makefile  README.md  pyproject.toml
.github/workflows/: check.yml
diff_generator/scripts/: gendiff.py
diff_generator/tests/: test_generate_diff.py
gendiff/scripts/: gendiff.py
tests/: test_generate_diff.py
